# very_basic_calculator

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: python-package.yml
.scripts/: checkup_scripts.sh
tests/: test_add.py  test_divide.py  test_multiply.py  test_power.py  test_subtract.py
very_basic_calculator/: __init__.py  divide.py  power.py  sqroot.py
