[tool.poetry]
name = "very_basic_calculator"
version = "0.1.2"
description = "A very basic python calculator"
readme = "README_pypi.rst"
authors = ["luanleonardo <llvdmoraes@gmail.com>"]
repository = "https://github.com/luanleonardo/very_basic_calculator"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
